[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[project]
name = "inquestlabs"
version = "1.2.1"
license = {file = "LICENSE"}
authors = [
	{ name="InQuest", email="labs@inquest.net" },
]
description = "A Pythonic interface and CLI tool for the InQuest Labs API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"attrs==22.2.0",
	"certifi==2022.9.24",
	"charset-normalizer==2.1.1",
	"coverage==6.5.0",
	"docopt==0.6.2",
	"idna==3.4",
	"iniconfig==1.1.1",
	"packaging==21.3",
	"pluggy==1.0.0",
	"py==1.11.0",
	"pyparsing==3.0.9",
	"pytest==7.1.3",
	"pytest-mock==3.9.0",
	"requests==2.28.1",
	"requests-mock==1.10.0",
	"six==1.16.0",
	"tomli==2.0.1",
	"urllib3==1.26.12",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.scripts]
inquestlabs = "inquestlabs:main"

[project.urls]
"Homepage" = "https://labs.inquest.net/"
"Repository" = "https://github.com/InQuest/inquestlabs"
"Bug Tracker" = "https://github.com/InQuest/inquestlabs/issues"
